[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srt_file_translator"
version = "0.1.0"
authors = [
  { name="Jack", email="bumblezhou@gmail.com" },
]
description = "A simple translator for any SubRip(.srt) file."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bumblezhou/srt_file_translator"
Issues = "https://github.com/bumblezhou/srt_file_translator/issues"